examples/compiler_errors/adversarial/common_dev_mistakes/UnknownEffectTypo.flx
// expect: compile_error
// expect-error: E407

module UnknownEffectTypo {
    fn bad() -> Unit with I {
    }
}
